# ConcuNews

./: CMakeLists.txt  README.md  admin.cpp  client.cpp  currency_service.cpp  main.cpp  server.cpp  weather_service.cpp
src/: cdb.csv  program3data.txt  program4data.txt  wdb.csv
src/admin/: Admin.cpp  Admin.h
src/client/: Cliente.cpp  Cliente.h
src/message/: messages.h
src/server/: Server.cpp  Server.h
src/services/: CurrencyService.cpp  CurrencyService.h  WeatherService.cpp  WeatherService.h  servicesmsg.h
src/utils/: utils.h
